--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "frontend",
+  "name": "admin",
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 5555",
+    "dev": "next dev -p 4321",
     "build": "next build",
-    "start": "next start -p 5555",
+    "start": "next start -p 4321",
     "lint": "next lint"
   },
   "dependencies": {
