--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@next-tools/dynamic": "^0.0.11",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.2",
     "ckeditor5-custom-build": "^0.0.6",
     "firebase": "^9.8.2",
     "js-cookie": "^3.0.5",
     "next": "12.1.6",
     "react": "^18.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.31.3",
